feat: add git hook to enforcing commit message style

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,6 @@
+[core]
+hooksPath = ./.githooks
+
 [filter "replacements.env"]
 smudge = ./scripts/git-replacements-filter.sh smudge %f
 clean = ./scripts/git-replacements-filter.sh clean %f
