feat(ssh): enable compression

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -3,7 +3,7 @@ Include ~/.ssh/config-private
 Host *
   ForwardAgent no
   AddKeysToAgent yes
-  Compression no
+  Compression yes
   ServerAliveInterval 15
   ServerAliveCountMax 3
   HashKnownHosts no
