--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 hooksPath = ./.githooks
 
-[filter "replacements.env"]
-smudge = ./scripts/git-replacements-filter.sh smudge %f
-clean = ./scripts/git-replacements-filter.sh clean %f
+[filter "replace.txt"]
+smudge = ./scripts/git-replace-filter.sh smudge %f
+clean = ./scripts/git-replace-filter.sh clean %f
