--- a/home/.config/VSCodium/User/settings.json
+++ b/home/.config/VSCodium/User/settings.json
@@ -17,6 +17,12 @@
     "editor.linkedEditing": true,
     "editor.formatOnSaveMode": "file",
     "files.trimTrailingWhitespace": true,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/__pycache__": true,
+    },
 
     // ----- Languages -----
 
