feat: do not auto activate python venvs in VSCodium

--- a/home/.config/VSCodium/User/settings.json
+++ b/home/.config/VSCodium/User/settings.json
@@ -72,10 +72,11 @@
         "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.formatOnSave": true
     },
-    "ruff.importStrategy": "fromEnvironment",
+    "python.terminal.activateEnvironment": false,
     "notebook.lineNumbers": "on",
     "notebook.formatOnSave.enabled": true,
     "notebook.defaultFormatter": "charliermarsh.ruff",
+    "ruff.importStrategy": "fromEnvironment",
 
     // Typst
     "[typst]": {
