feat: ignore direnv/venv dirs in codium

--- a/home/.config/VSCodium/User/settings.json
+++ b/home/.config/VSCodium/User/settings.json
@@ -22,6 +22,8 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/__pycache__": true,
+        "**/.direnv": true,
+        "**/.venv": true,
     },
 
     // ----- Languages -----
