feat: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/replace.txt
-*.log
-/home/.ssh/config-hosts
-result
-
 *.bak
+*.log
+/home/.config/vesktop/settings/settings.json
+/home/.ssh/config-hosts
+/replace.txt
+result
