feat(home): hide secondary sidebar on vscodium startup

--- a/home/.config/VSCodium/User/settings.json
+++ b/home/.config/VSCodium/User/settings.json
@@ -11,6 +11,7 @@
     "workbench.colorTheme": "Atom One Dark",
     "workbench.iconTheme": "material-icon-theme",
     "workbench.productIconTheme": "material-product-icons",
+    "workbench.secondarySideBar.defaultVisibility": "hidden",
 
     // ----- Behavior -----
 
